// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TabPanels renders correctly > with animation from left to right 1`] = `
<div
  className="tabPanelsWrapper"
  data-testid="tab-panels"
>
  <div
    aria-labelledby="tab-list-tab-0"
    className="tabPanelWrapper tabPanel active animationDirectionLtr"
    data-testid="tab-panel_tab-list-panel-0"
    id="tab-list-panel-0"
    role="tabpanel"
  >
    First
  </div>
  <div
    aria-labelledby="tab-list-tab-1"
    className="tabPanelWrapper tabPanel non-active"
    data-testid="tab-panel_tab-list-panel-1"
    id="tab-list-panel-1"
    role="tabpanel"
  >
    Second
  </div>
  <div
    aria-labelledby="tab-list-tab-2"
    className="tabPanelWrapper tabPanel non-active"
    data-testid="tab-panel_tab-list-panel-2"
    id="tab-list-panel-2"
    role="tabpanel"
  >
    Third
  </div>
</div>
`;

exports[`TabPanels renders correctly > with animation from right to left 1`] = `
<div
  className="tabPanelsWrapper"
  data-testid="tab-panels"
>
  <div
    aria-labelledby="tab-list-tab-0"
    className="tabPanelWrapper tabPanel active animationDirectionRtl"
    data-testid="tab-panel_tab-list-panel-0"
    id="tab-list-panel-0"
    role="tabpanel"
  >
    First
  </div>
  <div
    aria-labelledby="tab-list-tab-1"
    className="tabPanelWrapper tabPanel non-active"
    data-testid="tab-panel_tab-list-panel-1"
    id="tab-list-panel-1"
    role="tabpanel"
  >
    Second
  </div>
  <div
    aria-labelledby="tab-list-tab-2"
    className="tabPanelWrapper tabPanel non-active"
    data-testid="tab-panel_tab-list-panel-2"
    id="tab-list-panel-2"
    role="tabpanel"
  >
    Third
  </div>
</div>
`;

exports[`TabPanels renders correctly > with empty props 1`] = `
<div
  className="tabPanelsWrapper"
  data-testid="tab-panels"
>
  <div
    aria-labelledby="tab-list-tab-0"
    className="tabPanelWrapper tabPanel active animationDirectionRtl first"
    data-testid="tab-panel_tab-list-panel-0"
    id="tab-list-panel-0"
    role="tabpanel"
  >
    First
  </div>
  <div
    aria-labelledby="tab-list-tab-1"
    className="tabPanelWrapper tabPanel non-active"
    data-testid="tab-panel_tab-list-panel-1"
    id="tab-list-panel-1"
    role="tabpanel"
  >
    Second
  </div>
  <div
    aria-labelledby="tab-list-tab-2"
    className="tabPanelWrapper tabPanel non-active"
    data-testid="tab-panel_tab-list-panel-2"
    id="tab-list-panel-2"
    role="tabpanel"
  >
    Third
  </div>
</div>
`;

exports[`TabPanels renders correctly > with the given active tab panel 1`] = `
<div
  className="tabPanelsWrapper"
  data-testid="tab-panels"
>
  <div
    aria-labelledby="tab-list-tab-0"
    className="tabPanelWrapper tabPanel non-active"
    data-testid="tab-panel_tab-list-panel-0"
    id="tab-list-panel-0"
    role="tabpanel"
  >
    First
  </div>
  <div
    aria-labelledby="tab-list-tab-1"
    className="tabPanelWrapper tabPanel active animationDirectionRtl"
    data-testid="tab-panel_tab-list-panel-1"
    id="tab-list-panel-1"
    role="tabpanel"
  >
    Second
  </div>
  <div
    aria-labelledby="tab-list-tab-2"
    className="tabPanelWrapper tabPanel non-active"
    data-testid="tab-panel_tab-list-panel-2"
    id="tab-list-panel-2"
    role="tabpanel"
  >
    Third
  </div>
</div>
`;
